# dicom-structs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
collect-parquet/: Cargo.toml
collect-parquet/src/: main.rs
core/: Cargo.toml
core/src/: dicom.rs  error.rs  lib.rs  parquet.rs
dicom-symlink/: Cargo.toml
dicom-symlink/src/: main.rs
dicom-to-parquet/: Cargo.toml
dicom-to-parquet/src/: main.rs
project/: __init__.py
src/: main.rs  parquet.rs
tests/: test_version.py
